--- a/css/redesign.css
+++ b/css/redesign.css
@@ -338,11 +338,19 @@ i.star.filled { background: url("../images/svg/star-filled.svg") center no-repea
 
 .btn-block { display: block; width: 100%; padding: 0px 5px; text-align: center; margin-bottom: 10px; }
 
-.btn-big { height: 60px; line-height: 60px; font-size: 18px; font-size: 1.28571rem; text-transform: none; }
+.btn-midi { width: auto; height: 50px !important; line-height: 50px !important; font-size: 16px; font-size: 1.14286rem; padding: 0px 25px; text-transform: none; }
 
-.btn-red { background: #FF1341; border-color: #FF1341; }
+.btn-midi[class*="bordered"] { line-height: 48px !important; }
+
+.btn-big { width: auto; height: 60px !important; line-height: 60px !important; font-size: 18px; font-size: 1.28571rem; text-transform: none; padding: 0px 35px; }
+
+.btn-big[class*="bordered"] { line-height: 58px !important; }
+
+.btn-red { background: #FF1341; border-color: #FF1341; padding: 0px 25px; }
 
 .btn-red:hover { background: #e9002d; border-color: #e9002d; color: #FFF; }
+
+.btn-auto { width: auto !important; }
 
 .svg-offer-favorite { width: 14px; height: 14px; }
 
@@ -572,7 +580,11 @@ POPUPS --------------------- */
 
 .ui-field-btn { padding-top: 15px; }
 
-input.ui-input, select.ui-input, textarea.ui-input { height: 50px; display: block; width: 100%; background: #f5f5f5; padding: 0px 20px; font-size: 16px; font-size: 1.14286rem; border: 0; color: rgba(29, 64, 90, 0.9); }
+input.ui-input, select.ui-input, textarea.ui-input { height: 50px !important; display: block; width: 100%; background: #f5f5f5; padding: 0px 20px !important; font-size: 16px; font-size: 1.14286rem; border: 0; color: rgba(29, 64, 90, 0.9); }
+
+input.ui-input-light, select.ui-input-light, textarea.ui-input-light { background: none; border: 1px solid #e4e4e4; }
+
+textarea.ui-input { height: auto !important; padding: 15px 20px !important; }
 
 .ui-input .jq-selectbox__select { height: 50px; background: #f5f5f5; padding: 0px 20px; font-size: 16px; font-size: 1.14286rem; border: 0; color: rgba(29, 64, 90, 0.7); }
 
@@ -627,3 +639,87 @@ input.ui-input, select.ui-input, textarea.ui-input { height: 50px; display: bloc
 .color-gray a { color: #707070; }
 
 .color-gray a:hover { color: #0BB1CF; }
+
+.color-blue { color: #0BB1CF; }
+
+.page-title { font-weight: 700; font-size: 30px; font-size: 2.14286rem; }
+
+.cart-step { padding-bottom: 40px; margin-bottom: 60px; border-bottom: 1px solid #E4E4E4; }
+
+.cart-items { margin-bottom: 20px; }
+
+.cart-item { position: relative; padding: 20px; border: 1px solid #E4E4E4; }
+
+.cart-item-img { width: 170px; }
+
+.cart-item-img a { display: block; margin: -21px 0px -21px -21px; }
+
+.cart-item-img img { display: block; }
+
+.cart-item-info { width: 500px; padding-left: 30px; padding-right: 30px; color: #707070; }
+
+.cart-item-price, .cart-item-summ { width: 150px; padding: 0px 10px; font-size: 25px; font-size: 1.78571rem; white-space: nowrap; font-weight: 700; text-align: center; }
+
+.cart-item-name { font-size: 20px; font-size: 1.42857rem; font-weight: 700; margin-bottom: 6px; }
+
+.cart-item-name a { color: #000; text-decoration: none; }
+
+.cart-item-name a:hover { color: #0BB1CF; }
+
+.cart-item-date { margin-bottom: 6px; }
+
+.cart-item-date span { color: #0BB1CF; font-weight: 700; }
+
+.cart-item-advantages span:not(:last-child) { margin-right: 5px; padding-right: 7px; border-right: 1px solid #0BB1CF; }
+
+.cart-item-remove { display: block; width: 34px; height: 34px; position: absolute; top: 0; right: 0; font-size: 0; background: url("../images/svg/close.svg") center no-repeat; background-size: 15px; transition: transform .3s; }
+
+.cart-item-remove:hover { transform: rotate(90deg); filter: brightness(0); }
+
+.cart-item + .cart-item { margin-top: -1px; }
+
+.ui-amount { position: relative; width: 174px; max-width: 100%; border: 1px solid #e4e4e4; text-align: center; }
+
+.ui-amount-plus, .ui-amount-minus { display: inline-block; position: absolute; top: -1px; border: 1px solid #e4e4e4; width: 57px; height: 58px; font-size: 0; text-decoration: none; }
+
+.ui-amount-plus:before, .ui-amount-plus:after, .ui-amount-minus:before, .ui-amount-minus:after { content: ""; position: absolute; width: 10px; height: 2px; top: 50%; margin-top: -1px; margin-left: -5px; background: #555; transition: background .3s; }
+
+.ui-amount-plus:hover:before, .ui-amount-plus:hover:after, .ui-amount-minus:hover:before, .ui-amount-minus:hover:after { background: #0BB1CF; }
+
+.ui-amount-minus { left: -1px; }
+
+.ui-amount-plus { right: -1px; }
+
+.ui-amount-plus:after { transform: rotate(90deg); }
+
+.ui-amount input.ui-amount-input { width: 100%; height: 56px; border: 0; box-shadow: none; padding: 0px 57px; text-align: center; font-weight: 700; font-size: 16px; font-size: 1.14286rem; }
+
+.cart-appeal { position: relative; margin-bottom: 40px; padding: 20px 30px 20px 70px; background: #0BB1CF; color: #FFF; }
+
+.cart-appeal-icon { position: absolute; left: 30px; top: 50%; margin-top: -12px; width: 24px; height: 24px; line-height: 24px; text-align: center; background: #FFF; border-radius: 50%; color: #0BB1CF; font-weight: 700; font-size: 20px; font-size: 1.42857rem; }
+
+.svg-btn-icon { display: inline-block; vertical-align: middle; margin-right: 5px; position: relative; top: -1px; }
+
+.svg-btn-phone { width: 14px; height: 20px; fill: #FF1341; }
+
+.cart-btns .btn { padding: 0px 25px; text-transform: none; width: auto; min-width: 170px; }
+
+.cart-total { display: inline-block; vertical-align: middle; font-size: 24px; font-size: 1.71429rem; font-weight: 700; margin-right: 25px; line-height: 1; margin-bottom: 10px; }
+
+.cart-total-summ { font-size: 36px; font-size: 2.57143rem; color: #FF1341; }
+
+.cart-step-numbered { padding-left: 100px; padding-right: 100px; }
+
+.cart-step-header { position: relative; margin-bottom: 25px; font-size: 20px; font-size: 1.42857rem; font-weight: 700; }
+
+.cart-step-number { position: absolute; left: -92px; top: 50%; margin-top: -27px; width: 54px; height: 54px; line-height: 54px; text-align: center; background: #0BB1CF; border-radius: 50%; box-shadow: 0px 0px 0px 8px rgba(11, 177, 207, 0.3); color: #FFF; font-weight: 700; font-size: 26px; font-size: 1.85714rem; }
+
+.ui-field-hint { color: #707070; padding-top: 7px; font-size: 13px; font-size: 0.92857rem; }
+
+.cart-step-thanks { max-width: 670px; }
+
+.cart-step-thanks .h2, .cart-step-thanks h2 { padding-bottom: 15px; }
+
+.cart-total-btns { padding: 0px 100px; margin-top: -10px; margin-bottom: 100px; }
+
+.cart-total-btns .btn { min-width: 170px; }
